--- a/src/main/resources/blaplafla/todolist/views/gui/SubTaskListCell.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/SubTaskListCell.fxml
@@ -5,24 +5,16 @@
 <?import javafx.scene.text.Font?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="anchorPane" prefHeight="52.5" prefWidth="350.0"
             xmlns="http://javafx.com/javafx/16">
-    <GridPane layoutX="3.0" layoutY="3.0" prefHeight="29.0" prefWidth="343.0" AnchorPane.bottomAnchor="5.0"
-              AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <Label fx:id="title" text="Title">
-            <font>
-                <Font name="System Bold" size="20.0"/>
-            </font>
-        </Label>
-        <Label fx:id="timeLeft" text="Time left: 1d 2h 3p 4s" GridPane.columnIndex="1">
-            <font>
-                <Font size="16.0"/>
-            </font>
-        </Label>
-    </GridPane>
+    <Label fx:id="title" layoutX="8.0" layoutY="1.0" text="Title" AnchorPane.leftAnchor="5.0"
+           AnchorPane.topAnchor="3.0">
+        <font>
+            <Font name="System Bold" size="20.0"/>
+        </font>
+    </Label>
+    <Label fx:id="timeLeft" layoutX="184.0" layoutY="15.0" text="Time left: 1d 2h 3p 4s" AnchorPane.bottomAnchor="3.0"
+           AnchorPane.leftAnchor="5.0">
+        <font>
+            <Font size="16.0"/>
+        </font>
+    </Label>
 </AnchorPane>
